--- a/From_05_to_07.ipynb
+++ b/From_05_to_07.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -97,20 +97,20 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.24      0.39      0.30       496\n",
-      "           1       0.28      0.20      0.24       626\n",
-      "           2       0.12      0.86      0.21       140\n",
-      "           3       0.85      0.54      0.66       422\n",
-      "           4       0.55      0.41      0.47       705\n",
-      "           5       0.88      0.53      0.66       687\n",
-      "           6       0.47      0.63      0.54       269\n",
-      "           7       0.31      0.38      0.34        84\n",
-      "           8       0.49      0.06      0.11       662\n",
-      "           9       0.24      0.48      0.32        87\n",
+      "           0       0.20      0.33      0.25       456\n",
+      "           1       0.30      0.20      0.24       617\n",
+      "           2       0.09      0.78      0.17       131\n",
+      "           3       0.88      0.55      0.68       425\n",
+      "           4       0.55      0.40      0.46       703\n",
+      "           5       0.90      0.51      0.65       706\n",
+      "           6       0.49      0.64      0.56       276\n",
+      "           7       0.27      0.38      0.32        86\n",
+      "           8       0.37      0.06      0.10       676\n",
+      "           9       0.33      0.43      0.38       102\n",
       "\n",
-      "   micro avg       0.38      0.38      0.38      4178\n",
-      "   macro avg       0.44      0.45      0.38      4178\n",
-      "weighted avg       0.52      0.38      0.40      4178\n",
+      "    accuracy                           0.37      4178\n",
+      "   macro avg       0.44      0.43      0.38      4178\n",
+      "weighted avg       0.51      0.37      0.39      4178\n",
       "\n"
      ]
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -143,20 +143,20 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.24      0.37      0.29       472\n",
-      "           1       0.30      0.21      0.24       637\n",
-      "           2       0.12      0.90      0.21       151\n",
-      "           3       0.94      0.59      0.72       440\n",
-      "           4       0.62      0.36      0.46       702\n",
-      "           5       0.91      0.47      0.62       700\n",
-      "           6       0.51      0.61      0.56       250\n",
-      "           7       0.18      0.42      0.25        78\n",
-      "           8       0.66      0.11      0.18       635\n",
-      "           9       0.20      0.42      0.27       113\n",
+      "           0       0.26      0.37      0.31       488\n",
+      "           1       0.29      0.21      0.24       629\n",
+      "           2       0.11      0.93      0.19       131\n",
+      "           3       0.90      0.60      0.72       430\n",
+      "           4       0.58      0.33      0.42       694\n",
+      "           5       0.95      0.46      0.62       740\n",
+      "           6       0.53      0.68      0.59       244\n",
+      "           7       0.16      0.40      0.23        83\n",
+      "           8       0.62      0.09      0.16       634\n",
+      "           9       0.21      0.51      0.30       105\n",
       "\n",
-      "   micro avg       0.38      0.38      0.38      4178\n",
-      "   macro avg       0.47      0.45      0.38      4178\n",
-      "weighted avg       0.57      0.38      0.41      4178\n",
+      "    accuracy                           0.38      4178\n",
+      "   macro avg       0.46      0.46      0.38      4178\n",
+      "weighted avg       0.57      0.38      0.40      4178\n",
       "\n"
      ]
     }
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -185,20 +185,20 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.24      0.38      0.30       469\n",
-      "           1       0.32      0.21      0.25       590\n",
-      "           2       0.11      0.89      0.19       131\n",
-      "           3       0.98      0.59      0.73       469\n",
-      "           4       0.67      0.35      0.46       700\n",
-      "           5       0.74      0.49      0.59       709\n",
-      "           6       0.54      0.65      0.59       263\n",
-      "           7       0.14      0.39      0.20        79\n",
-      "           8       0.65      0.12      0.20       664\n",
-      "           9       0.29      0.51      0.37       104\n",
+      "           0       0.24      0.38      0.29       465\n",
+      "           1       0.30      0.18      0.23       597\n",
+      "           2       0.12      0.89      0.21       151\n",
+      "           3       0.96      0.60      0.74       437\n",
+      "           4       0.61      0.36      0.45       700\n",
+      "           5       0.88      0.50      0.64       692\n",
+      "           6       0.53      0.69      0.60       255\n",
+      "           7       0.15      0.41      0.21        86\n",
+      "           8       0.68      0.11      0.19       683\n",
+      "           9       0.27      0.49      0.35       112\n",
       "\n",
-      "   micro avg       0.39      0.39      0.39      4178\n",
+      "    accuracy                           0.39      4178\n",
       "   macro avg       0.47      0.46      0.39      4178\n",
-      "weighted avg       0.57      0.39      0.42      4178\n",
+      "weighted avg       0.58      0.39      0.41      4178\n",
       "\n"
      ]
     }
@@ -218,25 +218,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[178,  45, 186,   0,  10,   0,  21,  19,   4,   6],\n",
-       "       [141, 123, 237,   0,  15,   2,  11,  40,   1,  20],\n",
-       "       [  3,   2, 116,   0,   0,   0,   0,  10,   0,   0],\n",
-       "       [ 50,  32,  66, 275,  25,  10,   2,   0,   1,   8],\n",
-       "       [104,  35, 155,   3, 243,   6,  10, 100,  14,  30],\n",
-       "       [114,  56,  78,   3,   0, 346,  35,   1,  20,  56],\n",
-       "       [ 32,  17,  11,   0,   4,  15, 171,   4,   3,   6],\n",
-       "       [  8,  22,   3,   0,   8,   0,   5,  31,   0,   2],\n",
-       "       [ 97,  31, 229,   0,  60,  89,  53,  23,  80,   2],\n",
-       "       [  9,  17,  17,   0,   0,   0,   8,   0,   0,  53]], dtype=int64)"
+       "array([[175,  42, 186,   1,  15,   1,  19,  20,   3,   3],\n",
+       "       [152, 110, 243,   0,  17,   1,  13,  33,   0,  28],\n",
+       "       [  2,   1, 135,   0,   0,   0,   0,  13,   0,   0],\n",
+       "       [ 39,  39,  58, 264,  23,   2,   3,   0,   2,   7],\n",
+       "       [104,  36, 159,   3, 250,   1,  17,  97,  14,  19],\n",
+       "       [109,  43,  66,   4,   2, 345,  36,   0,  12,  75],\n",
+       "       [ 27,  13,  11,   0,   5,  14, 175,   3,   4,   3],\n",
+       "       [  8,  15,  11,   0,  13,   0,   4,  35,   0,   0],\n",
+       "       [103,  45, 243,   3,  84,  25,  51,  39,  75,  15],\n",
+       "       [  9,  23,  14,   0,   0,   1,  10,   0,   0,  55]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,13 +244,6 @@
    "source": [
     "confusion_matrix(y_test, y_pred)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -271,6 +264,35 @@
     "It doens't happen anything, the results are the same.\n",
     "### What would happen if there is cross-correlation between the non-class attributes?\n",
     "There is actually cross-correlation between pixels that are close to each other. As a consecuence of that, if two pixels are correlated (adjacent) to each other, and one of them is included in the top 10 of the most correlated pixels with the label, the other is likely to be in the top 10 as well."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.cluster import KMeans\n",
+    "from sklearn.metrics import homogeneity_score\n",
+    "\n",
+    "estimator = KMeans(n_clusters=10, random_state=1, n_jobs=-1).fit(data_top_10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.20017461793830968\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(homogeneity_score(y, estimator.labels_))"
    ]
   },
   {
@@ -297,7 +319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
